[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-scheduling"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
derivative          = "2"
fork_stream         = { workspace = true }
futures             = { version = "0.3", default-features = false }
hex                 = { version = "0.4", default-features = false }
multiaddr           = { version = "0.18", default-features = false }
nomos-blend-message = { workspace = true }
nomos-core          = { workspace = true }
rand                = { workspace = true, features = ["alloc"] }
serde               = { version = "1.0", default-features = false }
tokio               = { version = "1", default-features = false }
tokio-stream        = { version = "0.1", default-features = false }
tracing             = { workspace = true }

[dev-dependencies]
nomos-utils = { workspace = true }
rand        = { workspace = true, features = ["getrandom"] }
tokio       = { version = "1", default-features = false }
