[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "nomos-blend-scheduling"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                = { default-features = false, version = "0.1" }
derivative                 = "2"
fork_stream                = { workspace = true }
futures                    = { default-features = false, version = "0.3" }
hex                        = { default-features = false, version = "0.4" }
key-management-system-keys = { workspace = true }
multiaddr                  = { default-features = false, version = "0.18" }
nomos-blend-crypto         = { workspace = true }
nomos-blend-message        = { workspace = true }
nomos-blend-proofs         = { workspace = true }
nomos-core                 = { workspace = true }
nomos-utils                = { workspace = true, features = ["rng"] }
rand                       = { features = ["alloc"], workspace = true }
serde                      = { workspace = true }
thiserror                  = { default-features = false, version = "1" }
tokio                      = { default-features = false, version = "1" }
tokio-stream               = { default-features = false, version = "0.1" }
tracing                    = { workspace = true }

[dev-dependencies]
groth16             = { workspace = true }
libp2p              = { workspace = true }
nomos-blend-message = { workspace = true, features = ["unsafe-test-functions"] }
nomos-blend-proofs  = { workspace = true, features = ["unsafe-test-functions"] }
nomos-utils         = { workspace = true }
test-log            = { default-features = false, version = "0.2.18", features = ["trace"] }
tokio               = { default-features = false, version = "1" }

[features]
unsafe-test-functions = []
