[package]
edition = "2021"
license = { workspace = true }
name    = "kzgrs-backend"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ark-ff        = "0.4"
ark-poly      = "0.4.2"
ark-serialize = "0.4.2"
blake2        = "0.10"
itertools     = { version = "0.12", default-features = false }
kzgrs         = { workspace = true }
nomos-core    = { workspace = true }
rand          = { version = "0.8", default-features = false }
rayon         = { version = "1.10.0", optional = true }
serde         = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
ark-bls12-381 = { version = "0.4.0", default-features = false }
divan         = { version = "0.1", default-features = false }
rand          = { workspace = true }

[features]
default   = []
parallel  = ["dep:rayon", "kzgrs/parallel"]
single    = []
testutils = []

[[bench]]
harness = false
name    = "encoder"

[[bench]]
harness = false
name    = "verifier"

[[bench]]
harness = false
name    = "reconstruct"
