[package]
edition = "2021"
license = { workspace = true }
name    = "kzgrs-backend"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ark-ff        = "0.5.0"
ark-poly      = "0.5.0"
ark-serialize = "0.5.0"
ark-std	      = { version = "0.5.0" }
blake2        = { default-features = false, version = "0.10" }
itertools     = { default-features = false, version = "0.14" }
kzgrs         = { workspace = true }
nomos-core    = { workspace = true }
rand          = { default-features = false, features = ["std"], workspace = true }
rayon         = { optional = true, version = "1.11.0" }
serde         = { default-features = false, version = "1.0" }

[dev-dependencies]
ark-bls12-381 = { default-features = false, version = "0.5.0" }
divan         = { default-features = false, version = "0.1" }

[features]
default   = []
parallel  = ["dep:rayon", "kzgrs/parallel"]
single    = []
testutils = []

[[bench]]
harness = false
name    = "encoder"

[[bench]]
harness = false
name    = "verifier"

[[bench]]
harness = false
name    = "reconstruct"
