[package]
edition = "2021"
license = { workspace = true }
name    = "kzgrs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ark-bls12-381   = { version = "0.4.0", default-features = false }
ark-ec          = "0.4.2"
ark-ff          = { version = "0.4.2" }
ark-poly        = { version = "0.4.2" }
ark-poly-commit = { version = "0.4.0", default-features = false }
ark-serialize   = { version = "0.4" }
blake2          = { version = "0.10", default-features = false }
blst            = "0.3.11"
num-bigint      = { version = "0.4.4", default-features = false }
num-traits      = { version = "0.2.18", default-features = false }
rand            = { version = "0.8.5", default-features = false }
rayon           = { version = "1.10", optional = true }
thiserror       = "1.0.58"

[dev-dependencies]
divan = { version = "0.1", default-features = false }
rayon = "1.10"

[[bench]]
harness = false
name    = "kzg"

[[bench]]
harness = false
name    = "fft"

[[bench]]
harness = false
name    = "fk20"

[[bench]]
harness = false
name    = "rs"

[features]
default = ["single"]
parallel = [
  "ark-ec/parallel",
  "ark-ec/rayon",
  "ark-ff/asm",
  "ark-ff/parallel",
  "ark-ff/rayon",
  "ark-poly-commit/parallel",
  "ark-poly-commit/rayon",
  "ark-poly/parallel",
  "ark-poly/rayon",
  "dep:rayon",
]
single = []
