[package]
edition = "2021"
license = { workspace = true }
name    = "kzgrs"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
ark-bls12-381   = { default-features = false, features = ["curve", "scalar_field"], version = "0.5.0" }
ark-ec          = "0.5.0"
ark-ff          = { version = "0.5.0" }
ark-poly        = { version = "0.5.0" }
ark-poly-commit = { default-features = false, features = ["std"], version = "0.5.0" }
ark-serialize   = { version = "0.5" }
blake2          = { default-features = false, version = "0.10" }
blst            = "0.3.15"
num-bigint      = { default-features = false, version = "0.4.6" }
num-traits      = { default-features = false, version = "0.2.19" }
rand            = { default-features = false, version = "0.8.5" }
rayon           = { optional = true, version = "1.11" }
thiserror       = "2.0.16"

[dev-dependencies]
divan = { default-features = false, version = "0.1" }
rand  = { default-features = false, features = ["std"], version = "0.8.5" }
rayon = "1.11"

[[bench]]
harness = false
name    = "kzg"

[[bench]]
harness = false
name    = "fft"

[[bench]]
harness = false
name    = "fk20"

[[bench]]
harness = false
name    = "rs"

[features]
default = ["single"]
parallel = [
  "ark-ec/parallel",
  "ark-ec/rayon",
  "ark-ff/asm",
  "ark-ff/parallel",
  "ark-ff/rayon",
  "ark-poly-commit/parallel",
  "ark-poly-commit/rayon",
  "ark-poly/parallel",
  "ark-poly/rayon",
  "dep:rayon",
]
single = []
