[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "key-management-system-keys"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                  = { default-features = false, version = "0.1" }
bytes                        = { workspace = true }
ed25519-dalek                = { workspace = true, features = ["rand_core", "serde", "zeroize"] }
generic-array                = { default-features = false, version = "1.2.0" }
groth16                      = { workspace = true }
key-management-system-macros = { workspace = true }
nomos-blend-proofs           = { workspace = true }
nomos-utils                  = { features = ["rng", "serde", "types"], workspace = true }
num-bigint                   = { default-features = false, version = "0.4.6" }
poseidon2                    = { workspace = true }
rand_core                    = { default-features = false, version = "0.6.4" }
serde                        = { default-features = false, features = ["derive"], version = "1" }
subtle                       = { workspace = true }
thiserror                    = { default-features = false, version = "2" }
tokio                        = { default-features = false, version = "1", features = ["rt"] }
tracing                      = { default-features = false, version = "0.1" }
zeroize                      = { workspace = true }
zksign                       = { workspace = true }

[features]
unsafe = []
