[package]
edition = { workspace = true }
license = { workspace = true }
name    = "key-management-system"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait                  = "0.1"
bytes                        = { workspace = true }
ed25519-dalek                = { default-features = false, features = ["serde", "zeroize"], version = "2" }
groth16                      = { workspace = true }
key-management-system-macros = { workspace = true }
log                          = "0.4.22"
nomos-blend-message          = { workspace = true }
nomos-utils                  = { features = ["serde", "types"], workspace = true }
overwatch                    = { workspace = true }
poq                          = { workspace = true }
poseidon2                    = { workspace = true }
serde                        = { default-features = false, features = ["derive"], version = "1" }
thiserror                    = { default-features = false, version = "2" }
tokio                        = { default-features = false, version = "1" }
tracing                      = { default-features = false, version = "0.1" }
zeroize                      = { workspace = true }
zksign                       = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, features = ["rand_core"], version = "2" }
num-bigint    = { default-features = false, version = "0.4" }
rand          = { features = ["getrandom"], workspace = true }
serde         = { default-features = false, features = ["std"], version = "1" }
serde_yaml    = "0.9"
