[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "key-management-system-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                  = "0.1"
bytes                        = { workspace = true }
ed25519-dalek                = { default-features = false, features = ["serde", "zeroize"], version = "2" }
groth16                      = { workspace = true }
key-management-system-macros = { workspace = true }
log                          = "0.4.22"
nomos-blend-proofs           = { workspace = true }
nomos-utils                  = { features = ["serde", "types"], workspace = true }
overwatch                    = { workspace = true }
poq                          = { workspace = true }
poseidon2                    = { workspace = true }
serde                        = { workspace = true, features = ["derive"] }
thiserror                    = { default-features = false, version = "2" }
tokio                        = { default-features = false, version = "1", features = ["rt"] }
tracing                      = { default-features = false, version = "0.1" }
zeroize                      = { workspace = true }
zksign                       = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, features = ["rand_core"], version = "2" }
num-bigint    = { default-features = false, version = "0.4" }
rand          = { features = ["getrandom"], workspace = true }
serde         = { workspace = true, features = ["std"] }
serde_yaml    = "0.9"
